--- a/VPA_Website/templates/_base.html
+++ b/VPA_Website/templates/_base.html
@@ -4,6 +4,7 @@
         <title>Index</title>
 
         <link rel="stylesheet" href="static/styles.css">
+        <script src="static/scripts.js"></script>
     </head>
 
     <body>
