--- a/VPA_Website/templates/_base.html
+++ b/VPA_Website/templates/_base.html
@@ -11,6 +11,7 @@
         <div id="menu-section">
             <menu>
                 <li><a href="/index">{{ localization["MENU_INDEX"] }}</a></li>
+                <li><a href="/login">{{ localization["MENU_LOGIN"] }}</a></li>
             </menu>
         </div>
 
