--- a/VPA_Website/templates/_base.html
+++ b/VPA_Website/templates/_base.html
@@ -3,8 +3,8 @@
     <head>
         <title>Index</title>
 
-        <link rel="stylesheet" href="static/styles.css">
-        <script src="static/scripts.js"></script>
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+        <script src="{{ url_for('static', filename='scripts.js') }}"></script>
     </head>
 
     <body>
