--- a/VPA_Website/templates/user_profile.html
+++ b/VPA_Website/templates/user_profile.html
@@ -1,5 +1,13 @@
 {% extends "_base.html" %}
 
 {% block content %}
-
+    {% if user_obj is none %}
+        <div class="content-top-div">
+            <h1>{{ localization['PAGE_PROFILE_USER_NOT_FOUND'] }}</h1>
+        </div>
+    {% else %}
+        <div class="content-top-div">
+            <h1>{{ user_obj.username }}</h1>
+        </div>
+    {% endif %}
 {% endblock %}
