Fixed wrong javascript src

--- a/VPA_Website/templates/login.html
+++ b/VPA_Website/templates/login.html
@@ -17,5 +17,5 @@
         </form>
     </div>
 
-    <script src="static/login_scripts.js"></script>
+    <script src="{{ url_for('static', filename='login_scripts.js') }}"></script>
 {% endblock %}
