Added formular and link in menu to registration

--- a/VPA_Website/templates/_base.html
+++ b/VPA_Website/templates/_base.html
@@ -12,6 +12,7 @@
             <menu>
                 <li><a href="/index">{{ localization["MENU_INDEX"] }}</a></li>
                 <li><a href="/login">{{ localization["MENU_LOGIN"] }}</a></li>
+                <li><a href="/register">{{ localization["MENU_REGIS"] }}</a></li>
             </menu>
         </div>
 
