--- a/VPA_Website/templates/register.html
+++ b/VPA_Website/templates/register.html
@@ -1,5 +1,24 @@
 {% extends "_base.html" %}
 
 {% block content %}
+    <div class="content-top-div">
+        <form id="register-form">
+            <div class="form-label-input-div">
+                <label for="username">{{localization["PAGE_REGISTER_USERNAME_LABEL"]}}</label>
+                <input type="text" name="username" id="username" required/>
+            </div>
 
+            <div class="form-label-input-div">
+                <label for="password">{{localization["PAGE_REGISTER_PASSWORD_LABEL"]}}</label>
+                <input type="password" name="password" id="password" required/>
+            </div>
+
+            <div class="form-label-input-div">
+                <label for="password-repeat">{{localization["PAGE_REGISTER_PASSWORD_REPEAT_LABEL"]}}</label>
+                <input type="password" name="password-repeat" id="password-repeat" required/>
+            </div>
+
+            <input type="submit" value="{{ localization['PAGE_REGISTER_SUBMIT_LABEL'] }}" />
+        </form>
+    </div>
 {% endblock %}
