Added register javascript files

--- a/VPA_Website/templates/register.html
+++ b/VPA_Website/templates/register.html
@@ -21,4 +21,6 @@
             <input type="submit" value="{{ localization['PAGE_REGISTER_SUBMIT_LABEL'] }}" />
         </form>
     </div>
+
+    <script src="{{ url_for('static', filename='register_scripts.js') }}"></script>
 {% endblock %}
