Made menu dynamically changed based on authorization status

--- a/VPA_Website/templates/_base.html
+++ b/VPA_Website/templates/_base.html
@@ -11,8 +11,10 @@
         <div id="menu-section">
             <menu>
                 <li><a href="/index">{{ localization["MENU_INDEX"] }}</a></li>
-                <li><a href="/login">{{ localization["MENU_LOGIN"] }}</a></li>
-                <li><a href="/register">{{ localization["MENU_REGIS"] }}</a></li>
+                {% if auth_user is none %}
+                    <li><a href="/login">{{ localization["MENU_LOGIN"] }}</a></li>
+                    <li><a href="/register">{{ localization["MENU_REGIS"] }}</a></li>
+                {% endif %}
             </menu>
         </div>
 
