--- a/VPA_Website/templates/_base.html
+++ b/VPA_Website/templates/_base.html
@@ -14,6 +14,10 @@
                 {% if auth_user is none %}
                     <li><a href="/login">{{ localization["MENU_LOGIN"] }}</a></li>
                     <li><a href="/register">{{ localization["MENU_REGIS"] }}</a></li>
+                {% else %}
+                    <li><a href="/logout">{{ localization["MENU_LOGOT"] }}</a></li>
+
+
                 {% endif %}
             </menu>
         </div>
