--- a/VPA_Website/templates/project_profile.html
+++ b/VPA_Website/templates/project_profile.html
@@ -7,7 +7,7 @@
         </div>
     {% else %}
         <div class="content-top-div">
-            <h1>{{ project_obj.username }}</h1>
+            <h1>{{ project_obj.name }}</h1>
 
         </div>
 
