Added javascript file for user_profile.html

--- a/VPA_Website/templates/user_profile.html
+++ b/VPA_Website/templates/user_profile.html
@@ -20,4 +20,7 @@
             </div>
         {% endfor %}
     {% endif %}
+
+    <script src="{{ url_for('static', filename='user_profile_scripts.js') }}"></script>
+
 {% endblock %}
