Made description field optional

--- a/VPA_Website/templates/user_profile.html
+++ b/VPA_Website/templates/user_profile.html
@@ -22,7 +22,7 @@
 
                     <div class="form-label-input-div">
                         <label for="project-desc">{{localization["PAGE_USER_PROFILE_CREATE_PROJECT_DESC"]}}</label>
-                        <input type="text" name="project-desc" id="project-desc" required/>
+                        <input type="text" name="project-desc" id="project-desc"/>
                     </div>
 
                     <input type="submit" value="{{ localization['PAGE_LOGIN_SUBMIT_LABEL'] }}" />
