--- a/VPA_Website/templates/project_profile.html
+++ b/VPA_Website/templates/project_profile.html
@@ -7,9 +7,13 @@
         </div>
     {% else %}
         <div class="content-top-div">
-            <h1><a href="{{ url_for('user_blueprint.user_by_id_get', user_id=project_obj.user_id) }}">{{ project_obj.owner.username }}</a>/{{ project_obj.name }}</h1>
+            <div>
+                <h1><a href="{{ url_for('user_blueprint.user_by_id_get', user_id=project_obj.user_id) }}">{{ project_obj.owner.username }}</a>/{{ project_obj.name }}</h1>
+            </div>
+            <hr />
+            <div>
+                <p>{{ project_obj.description }}</p>
+            </div>
         </div>
-
-
     {% endif %}
 {% endblock %}
