Little styles are applied

--- a/VPA_Website/static/styles.css
+++ b/VPA_Website/static/styles.css
@@ -107,3 +107,19 @@
 .standard-button:hover {
     text-decoration: underline;
 }
+
+#categories-section {
+    display: flex;
+
+    overflow-x: scroll;
+}
+
+#categories-section > div {
+    min-width: 300px;
+    height: 100%;
+    margin: 10px;
+}
+
+.category-title-section {
+    text-align: center;
+}
