--- a/VPA_Website/templates/login.html
+++ b/VPA_Website/templates/login.html
@@ -4,16 +4,16 @@
    <div class="content-top-div">
         <form id="login-form">
             <div class="form-label-input-div">
-                <label for="username">{{localization["PAGE_LOGIN_USERNAME_LABEL"]}}</label>
+                <label for="username">Username</label>
                 <input type="text" name="username" id="username" required/>
             </div>
 
             <div class="form-label-input-div">
-                <label for="password">{{localization["PAGE_LOGIN_PASSWORD_LABEL"]}}</label>
+                <label for="password">Password</label>
                 <input type="password" name="password" id="password" required/>
             </div>
 
-            <input type="submit" value="{{ localization['PAGE_LOGIN_SUBMIT_LABEL'] }}" />
+            <input type="submit" value="Login" />
         </form>
     </div>
 
