--- a/VPA_Website/templates/project_profile.html
+++ b/VPA_Website/templates/project_profile.html
@@ -3,7 +3,7 @@
 {% block content %}
     {% if project_obj is none %}
         <div class="content-top-div">
-            <h1>{{ localization['PAGE_PROJECT_PROFILE_PROJECT_NOT_FOUND'] }}</h1>
+            <h1>This project doesn't exist</h1>
         </div>
     {% else %}
         <div class="content-top-div">
