--- a/VPA_Website/templates/index.html
+++ b/VPA_Website/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "_base.html" %}
 
 {% block content %}
-    {{ localization["PAGE_CONTENT"] }}
+    THIS IS INDEX PAGE, I WILL ADD HERE SOMETHING LATER
 
 {% endblock %}
