Added script file for project profile

--- a/VPA_Website/templates/project_profile.html
+++ b/VPA_Website/templates/project_profile.html
@@ -47,4 +47,6 @@
             {% endfor %}
         </div>
     {% endif %}
+
+    <script src="{{ url_for('static', filename='project_profile_scripts.js') }}"></script>
 {% endblock %}
