Implemented submit functionality for creating categories

--- a/VPA_Website/templates/project_profile.html
+++ b/VPA_Website/templates/project_profile.html
@@ -24,6 +24,8 @@
                     <div class="form-label-input-div">
                         <label for="category-name">Name</label>
                         <input type="text" name="category-name" id="category-name" required/>
+
+                        <input type="hidden" id="category-project-id" name="category-project-id" value="{{project_obj.id}}">
                     </div>
 
                     <input type="submit" value="Create" />
