Added basic style for dragging

--- a/VPA_Website/templates/project_profile.html
+++ b/VPA_Website/templates/project_profile.html
@@ -43,7 +43,7 @@
                     <hr />
                     <div class="category-items-section">
                         {% for one_item in one_category.items %}
-                            <div class="content-top-div">
+                            <div class="content-top-div item-div" draggable="true">
                                 {{ one_item.name }}
                             </div>
                         {% endfor %}
