--- a/VPA_Website/templates/project_profile.html
+++ b/VPA_Website/templates/project_profile.html
@@ -46,7 +46,7 @@
                         <div class="content-top-div">
                             <h4>CREATE ITEM</h4>
 
-                            <form id="create-item-form">
+                            <form class="create-item-form">
                                 <div class="form-label-input-div">
                                     <label for="item-name">Name</label>
                                     <input type="text" name="item-name" id="item-name" required/>
